Fixed scoreboard pawns when player disconnect